Fixed interface, login/logout, full CRUD operations

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -8,7 +8,11 @@
   <script src="https://code.angularjs.org/1.8.2/angular-route.js"></script>
 
   <!-- Load Scripts -->
-  <script src="js/dashboard.js"></script>
+  <script src="js/var.properties.js"></script>
+  <script src="js/module.dashboard.js"></script>
+  <script src="js/class.BaseData.js"></script>
+  <script src="js/controller.contacts.js"></script>
+  <script src="js/controller.profile.js"></script>
   <link href="css/styles.css" rel="stylesheet" />
   <base href="/"/>
 </head>
