--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,9 @@
   <script src="https://code.angularjs.org/1.8.2/angular-route.js"></script>
 
   <!-- Load Scripts -->
-  <script src="js/main.js"></script>
+  <script src="js/var.properties.js"></script>
+  <script src="js/module.main.js"></script>
+  <script src="js/class.BaseAccount.js"></script>
   <link href="css/styles.css" rel="stylesheet" />
   <base href="/"/>
 </head>
