--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
   <script src="js/module.main.js"></script>
   <script src="js/class.BaseAccount.js"></script>
   <link href="css/styles.css" rel="stylesheet" />
-  <base href="/"/>
+  <base href="/home"/>
 </head>
 
 <body>
