--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -13,6 +13,7 @@
   <script src="js/class.BaseData.js"></script>
   <script src="js/controller.contacts.js"></script>
   <script src="js/controller.profile.js"></script>
+  <script src="js/controller.explore.js"></script>
   <link href="css/styles.css" rel="stylesheet" />
   <base href="/"/>
 </head>
