--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" ng-app="main">
+<html ng-app="main">
 <title>PhoneBook App</title>
 <head>
   <meta charset="utf-8">
